[package]
name = "bean-rs"
license = "MIT"
authors = ["Chris Arderne <chris@rdrn.me"]
description = "beancount clone in Rust"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["derive"] }
pest = "2.7.6"
pest_derive = "2.7.6"
rust_decimal = "1.33.1"

[[bin]]
name = "bean"
path = "src/main.rs"
