[package]
name = "bean-rs"
license = "MIT"
authors = ["Chris Arderne <chris@rdrn.me"]
description = "beancount clone in Rust"
version = "0.0.1"  # set by Github Actions CI
edition = "2021"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.0"
log = "0.4.20"
pest = "2.7.6"
pest_derive = "2.7.6"
pyo3 = "0.20.0"
rust_decimal = "1.33.1"

[lib]
name = "bean_rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "bean-rs"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
