[tool.rye.scripts]
check = "pyright"
test = "pytest"

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "bean-rs"
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Unix",
  "Programming Language :: Rust",
  "Programming Language :: Python",
  "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

requires-python = ">= 3.9"

dependencies = [
]

[project.urls]
homepage = "https://github.com/carderne/signal-export"
repository = "https://github.com/carderne/signal-export"

[tool.rye]
managed = true
dev-dependencies = [
    "maturin>=1.5,<2.0",
    "pyright",
    "pytest",
]

[tool.maturin]
python-source = "python"
module-name = "bean_rs._bean_rs"
features = ["pyo3/extension-module"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "I",
    "U",
    "N",
    "E",
    "T100",
    "A",
    "Q",
    "ANN",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["./python/bean_rs"]
include = ["python"]
reportMissingImports = true
reportMissingParameterType = true
reportUnnecessaryTypeIgnoreComment = true
reportDeprecated = true
pythonVersion = "3.12"
pythonPlatform = "Linux"
